[package]
name = "fuel-sequencer-proto"
version = "0.1.0"
edition = "2021"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["concurrency", "cryptography::cryptocurrencies"]
description = "Fuel SDK to interact with sequencer."
homepage = "https://fuel.network/"
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/sequencer-rs-sdk"
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "vm"]

publish = true
build = "build.rs"

[dependencies]
prost = "0.12"
prost-types = "0.12"
tonic = "0.11"

[build-dependencies]
regex = "1.10"
